# adare

./: .gitignore  BASE_DISK_PROTECTION_IMPLEMENTATION.md  CLAUDE.md  CLAUDE_IMPLEMENTATION_LOG.md  CLAUDE_IMPLEMENTATION_SUMMARY.md  CSV_LOGGING_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  Makefile  NOTES.md  README.md  REGEX_FUZZY_TEXT_MATCHING_IMPLEMENTATION.md  ROADMAP.md  SPECIFIC_CHARACTERS_UPDATE.md  WEBSOCKET_TIMEOUT_FIX.md  check_status.json  check_status_log.json  cleanup_package_dir.py  debug_command.json  debug_command_generator.py  debug_import.py  debug_imports.py  debug_qmp.py  debug_schtasks.json  pyproject.toml  read_log.json  repro_raw_string.py  reproduce_issue.py  requirements.txt  setup.cfg  test_async_vbox.py  test_env_verification.yml  test_playbook_builder.md  test_websocket.py  ubuntu2510-20260329.yml  verify_dev_list_formatting.py  verify_files.json  verify_ws_access.py
adare/: README.md  pyproject.toml  setup.cfg  setup.py  verify_log_path.py
adare-cv-server/: README.md  pyproject.toml  reproduce_ocr.py  test_cv_pipeline.py
adare-cv-server/adare_cv_server/: __init__.py  constants.py  exceptions.py  feature_matching.py  image_processing.py  ocr_processing.py  server.py
adare-cv-server/tests/: test_ocr_gap.py
adare-mcp-server/: pyproject.toml
adare-mcp-server/adare_mcp_server/: __init__.py  server.py
adare-mcp-server/tests/: test_find_icon.py  test_find_text.py
adare/adare/: api.py  breakpoint.py  console.py  example.py  exceptions.py  experimentconfig.py  mcp_gui.py  parsers.py  run.py  setup_logging.py  test.py
adare/adare/backend/: attrs_classes.py  basics.py  directory.py  environment.py  networkdrive.py  project.py  setupfile.py  sync.py  types.py
adare/adare/cli/: dev.py  diff.py  environment.py  experiment.py  global_environment.py  global_vm.py  gui.py  help.py  interactive.py  manage.py  manage_os_profile.py  mcp.py  migrate.py  project.py  project_enhanced.py  show.py  showversion.py  status.py  testfunction.py  utils.py  vagrant.py  vm.py  vm_create.py  web.py  web_cmd.py  ws.py
adare/adare/config/: __init__.py  breakpoints.py  configdirectory.py  database.py  exceptions.py  server.py
adare/adare/core/: __init__.py  result.py
adare/adare/database/: exceptions.py  fixtures.py  init.py  reference_manager.py  utils.py
adare/adare/gui/: dialogs.py  run.py  storage.py
adare/adare/helperFunctions/: cookies.py
adare/adare/helperfunctions/: cli.py  cookies.py  file_error_suggestions.py  hash.py  image.py  integrity.py  module.py  output_formatter.py  path_resolution.py  playbook_analysis.py  port.py  project_suggestions.py  string.py  text.py  vm_suggestions.py
adare/adare/hypervisor/: __init__.py  exceptions.py  executable_manager.py
adare/adare/logger/: logger.py
adare/adare/networkdrive/: __init__.py  exceptions.py  networkdrive.py
adare/adare/services/: __init__.py  devmode_service.py  environment_service.py  experiment_service.py  manage_service.py  project_service.py  show_service.py  submit_service.py  testfunction_service.py  vm_service.py  web_service.py
adare/adare/tests/: __init__.py  run_tests.py  test_global_registry_migration.py  test_output_formatter.py
adare/adare/types/: __init__.py  actions.py  backend.py  environment.py  event_types.py  experiment.py  output_models.py  playbook.py  playbook_validators.py  stages.py  step_actions.py  websocket.py
adare/adare/vagrantapi/: ctxmanager.py  exceptions.py  outputprocessor.py  vagrantbox.py  vagrantfile.py  vagrantutils.py
adare/adare/validators/: __init__.py  vm_validators.py
adare/adare/virtualbox/: __init__.py  api.py  api_backup.py  commands.py  manager.py  models.py  networking.py  snapshots.py  utils.py
adare/adare/web/: exceptions.py  login.py
adare/adare/webapi/: __init__.py  adapters.py  main.py  process_manager.py  websocket_manager.py
adare/adare/webappaccess/: api_client.py  download.py  exceptions.py  experiment.py  experiment_export.py  gitea_api.py  login.py  publish.py  publish_experiment.py  request.py  upload.py  webapp.py
adare/appdata/VagrantfileTemplate/: Vagrantfile  VagrantfileMultiMachine
adare/appdata/examples/: wait_until_test.yml
adare/appdata/os-profiles/: fedora41.yml  fedora41arm64.yml  ubuntu2204.yml  ubuntu2204arm64.yml  ubuntu2404.yml  ubuntu2404arm64.yml  ubuntu2510.yml  ubuntu2510arm64.yml  ubuntu2604.yml  ubuntu2604arm64.yml  windows10.yml  windows11.yml  windows11arm64.yml
adare/cli/: webserver.py
adare/docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
adare/docs/.doctrees/: environment.pickle  index.doctree
adare/docs/advanced/: index.html  testfunction.html  vagrantboxcreation.html
adare/docs/architecture/: actionsetfile.html  environmentsetupfile.html  index.html  testsetfile.html
adare/docs/cli/: index.html
adare/docs/gettingstarted/: index.html
adare/docs/gui/: index.html
adare/docs/html/: genindex.html
adare/docs/installation/: index.html
adare/docs/introduction/: index.html
adare/docsrc/source/: conf copy.py  conf.py
adare/install/: copy_appdata.py  install.ps1  install.sh  update.sh
adare/tests/: __init__.py  conftest.py  test.py  test2.py  test_comprehensive_playbook.py  test_mcp_gui_server.py  test_optimization_cache.py  test_playbook_parser.py  testtextualize.py
adare/tests/files/: action.yml  comprehensive_playbook.yaml  test_playbook.yaml
adare/tests/integration/: ws.py
adare/tests/manual/: test_stage_print.py
adare/webapi/: adapters.py  main.py  vm_proxy.py  websocket_manager.py
adare/webapi/routes/: environments.py  experiments.py  local_vms.py  manage.py  projects.py  runs.py  testfunctions.py  (+1 more)
adarelib/: pyproject.toml
adarelib/adarelib/: breakpoint.py  config.py  console.py  constants.py  event.py  exceptions.py  experimentconfig.py  parsers.py  testfunction.py  types.py
adarevm/: README.md  functionaltest.py  pyproject.toml
adarevm/adarevm/: event.py  exception.py  main.py  record.py  run.py  shell.py
adarevm/install/: install.ps1  install.sh
adarevm/tests/: test_eventsystem.py
(+2125 files in other folders)
