[tool.poetry]
name = "adaredepend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
adarevm = {path="adarevm"}
adare = {path="adare"}
adarelib = {path="adarelib"}

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.11.0"
pytest-cov = "^4.0.0"


[tool.poetry.group.dev.dependencies]
sphinx = "<8.0"
furo = "^2025.7.1"

[tool.poetry.group.docs.dependencies]
sphinx = "<8.0"
furo = "^2025.7.1"

[tool.poetry.scripts]
adare = "adare.run:main"
adareexp = "adare.example:main"
mcp_gui = "adare.mcp_gui:main"

[tool.poetry.extras]
docs = ["sphinx", "furo"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --disable-warnings"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.coverage.run]
source = ["adare"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
