[project]
name = "adaredepend"
version = "0.1.0"
description = ""
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    "adarevm",
    "adare",
    "adarelib",
    "adare-cv-server",
]

[project.scripts]
adare = "adare.run:main"
adareexp = "adare.example:main"
mcp_gui = "adare.mcp_gui:main"

[project.optional-dependencies]
docs = ["sphinx", "furo"]
qemu = ["adare[qemu]"]

[dependency-groups]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "sphinx<8.0",
    "furo>=2025.7.1",
]
docs = [
    "sphinx<8.0",
    "furo>=2025.7.1",
]

[tool.uv.sources]
adarevm = { workspace = true }
adare = { workspace = true }
adarelib = { workspace = true }
adare-cv-server = { workspace = true }

[[tool.uv.index]]
name = "paddlepaddle"
url = "https://www.paddlepaddle.org.cn/packages/stable/cpu/"
explicit = true

[tool.uv.workspace]
members = ["adare", "adarevm", "adarelib", "adare-cv-server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --disable-warnings"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: marks tests as asyncio tests"
]

[tool.coverage.run]
source = ["adare"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["adaredepend"]
