[metadata]
name = adare
author = FKIE
author_email = need to be done
description = need to be done
version = 0.0.1
url = need to be done
keywords =
  linuxforensic
;classifiers =
;  Development Status :: 4 - Beta
;  Intended Audience :: Science/Research
;  Programming Language :: Python :: 3
;  Topic :: Forensic
;license_files =
;  LICENSE.txt

[options]
python_requires = >= 3.9
include_package_data = True
package_dir=
    =src
packages=
    adare
    adare.backend
    adare.config
    adare.logger
    adare.cli
    adare.networkdrive
    adare.vagrantapi
    adare.helperFunctions
    adare.helperFunctions.yaml
    adare.helperFunctions.jinja
    adare.helperFunctions.strings

install_requires =
    Jinja2>=3.0.3
    MarkupSafe==2.0.1
    Pillow==9.0.1
    PyYAML==6.0
    SQLAlchemy>=1.4.39
    attrs>=21.4.0
    cattrs>=22.1.0
    dacite==1.6.0
    datefinder==0.7.1
    guibot==0.41.1
    hypothesis==6.47.5
    prettytable>=3.0.0
    python-dateutil==2.8.2
    pytz==2021.3
    readchar==3.0.5
    regex==2022.1.18
    retry==0.9.2
    six==1.16.0
    wcwidth==0.2.5
    python-vagrant

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    adare=adare.run:run

[options.extras_require]
docs =
    sphinx
    sphinx_rtd_theme

[build-system]
requires = ["setuptools", "wheel"]

[build_sphinx]
project = 'LinuxAuto'
version = 0.0.1
;release = 0
source-dir = docsrc/source
build-dir  = docs
all_files  = 1

;[flake8]
;max-line-length = 160
;per-file-ignores = __init__.py:F401
;exclude =
;    .git,
;    __pycache__
;    htmlcov
;    dist
;    build
;    .tox
;    .hypothesis
;    docs
;    venv
;    src/adare/data

;[coverage:run]
;omit =
;    */data/*