[tool.poetry]
name = "adare-cv-server"
version = "0.1.0"
description = "Computer vision and OCR server for Adare framework"
authors = ["miqsoft <mksaxhandball@gmail.com>"]
readme = "README.md"
packages = [{include = "adare_cv_server"}]

[tool.poetry.scripts]
adare-cv-server = "adare_cv_server.server:main"

[tool.poetry.dependencies]
python = "^3.10"
fastmcp = "^2.9.2"
click = "^8.1.7"
opencv-python = "^4.10.0"
paddleocr = "^3.1.0"
paddlepaddle = { version = "3.0.0", source = "paddlepaddle" }
numpy = "^1.26.0"
scikit-learn = "^1.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
ruff = "^0.5.0"

[[tool.poetry.source]]
name = "paddlepaddle"
url = "https://www.paddlepaddle.org.cn/packages/stable/cpu/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"