[project]
name = "adare-cv-server"
version = "0.1.0"
description = "Computer vision and OCR server for Adare framework"
authors = [{name = "miqsoft", email = "mksaxhandball@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    "fastmcp>=2.9.2",
    "click>=8.1.7",
    "opencv-python>=4.10.0",
    "paddleocr>=3.1.0",
    "paddlepaddle==3.2.2",
    "numpy>=1.26.0",
    "scikit-learn>=1.7.2",
]

[project.scripts]
adare-cv-server = "adare_cv_server.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
]

[[tool.uv.index]]
name = "paddlepaddle"
url = "https://www.paddlepaddle.org.cn/packages/stable/cpu/"
explicit = true

[tool.uv.sources]
paddlepaddle = { index = "paddlepaddle" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["adare_cv_server"]
