[tool.poetry]
name = "adare"
version = "0.1.0"
description = ""
authors = ["miqsoft <mksaxhandball@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
adarelib = {path = "../adarelib"}
python = "^3.10"
requests = "^2.31.0"
sqlalchemy = "^2.0.27"
jinja2 = "^3.1.3"
cattrs = "^23.2.3"
sqlalchemy-serializer = "^1.4.1"
pyyaml = "^6.0.1"
nicegui = "^1.4.15"
retry = "^0.9.2"
python-vagrant = "^1.0.0"
prettytable = "^3.9.0"
tqdm = "^4.66.2"
prompt-toolkit = "^3.0.43"
six = "^1.16.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
watchdog = "^4.0.0"


[tool.poetry.scripts]
adare = "adare.run:main"
adaretest = "adare.test:main"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

