[project]
name = "adare"
version = "0.1.0"
description = ""
authors = [{name = "miqsoft", email = "mksaxhandball@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    "adarelib",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.36",
    "jinja2>=3.1.3",
    "cattrs>=23.2.3",
    "sqlalchemy-serializer>=1.4.1",
    "pyyaml>=6.0.1",
    "nicegui>=1.4.15",
    "retry>=0.9.2",
    "prettytable>=3.9.0",
    "tqdm>=4.66.2",
    "prompt-toolkit>=3.0.43",
    "six>=1.16.0",
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=2.0.0",
    "watchdog>=4.0.0",
    "keyboard>=0.13.5",
    "python-ulid>=2.7.0",
    "textual-dev>=1.7.0",
    "textual>=2.1.1",
    "trogon>=0.6.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "redis>=6.2.0",
    "pandas>=2.3.1",
    "fastmcp>=2.9.2",
    "websockets>=15.0",
    "pillow>=12.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.20",
    "pycdlib>=1.14.0",
]

[project.scripts]
adare = "adare.run:main"
adareexp = "adare.example:main"

[project.optional-dependencies]
docs = ["sphinx", "sphinx-rtd-theme"]
qemu = ["libvirt-python>=11.0.0"]

[dependency-groups]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.0.0",
]

[tool.uv.sources]
adarelib = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --disable-warnings"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.coverage.run]
source = ["adare"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
