[metadata]
name = adare
author = FKIE
author_email = need to be done
description = need to be done
version = 0.0.1
url = need to be done
keywords =
  linuxforensic
;classifiers =
;  Development Status :: 4 - Beta
;  Intended Audience :: Science/Research
;  Programming Language :: Python :: 3
;  Topic :: Forensic
;license_files =
;  LICENSE.txt

[options]
python_requires = >= 3.9
include_package_data = True
package_dir=
    =src
packages=
    adare
    adare.backend
    adare.backend.script_creation
    adare.config
    adare.logger
    adare.cli
    adare.networkdrive
    adare.vagrantapi
    adare.customyaml
    adare.gui
    adare.gui.extensions
    adare.gui.extensions.advanced_table
    adare.gui.interfaces
    adare.gui.components
    adare.gui.pages.experiment
    adare.gui.pages.index
    adare.gui.pages.request
    adare.gui.pages.experimentrun
    adare.gui.pages.login
    adare.gui.pages.log
    adare.helperFunctions
    adare.helperFunctions.csv
    adare.helperFunctions.jinja
    adare.helperFunctions.strings
    adare.helperFunctions.workingdirectory
    adare.helperFunctions.subprocess
    adare.helperFunctions.port
    adare.helperFunctions.pyfileanalyze
    adare.helperFunctions.regex
    adare.helperFunctions.dict
    adare.helperFunctions.web
    adare.testsetfile
    adare.database
    adare.database.models
    adare.database.api
    adare.webappaccess

install_requires =
    Jinja2
    MarkupSafe
    Pillow
    PyYAML
    SQLAlchemy
    attrs
    cattrs
    dacite
    datefinder
    hypothesis
    python-dateutil
    pytz
    readchar
    regex
    retry
    six
    wcwidth
    python-vagrant
    tqdm
    SQLAlchemy-serializer
    nicegui
    aiohttp
    pandas
    rich
    prettytable

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    adare=adare.run:run

[options.extras_require]
docs =
    sphinx
    sphinx_rtd_theme

[build-system]
requires = ["setuptools", "wheel"]

[build_sphinx]
project = 'ADARE'
version = 0.0.1
;release = 0
source-dir = docsrc/source
build-dir  = docs
all_files  = 1
