[tool.poetry]
name = "adarelib"
version = "0.1.0"
description = ""
authors = ["miqsoft <mksaxhandball@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dateutil = "^2.8.2"
jinja2 = "^3.1.3"
pandas = "^2.2.0"
rich = "^13.7.0"
pytest = "^8.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
