[project]
name = "adarelib"
version = "0.1.1"
description = ""
authors = [{name = "miqsoft", email = "mksaxhandball@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "cattrs>=23.2.3",
    "pyyaml>=6.0.1",
    "python-ulid>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
