[tool.poetry]
name = "adarevm"
version = "0.1.0"
description = ""
authors = ["miqsoft <mksaxhandball@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
adarelib = {path = "../adarelib", develop=true}
python = "^3.10"
pyautogui = "^0.9.54"
websockets = "^15.0"
cattrs = "^23.2.3"
attrs = "^24.0.0"
python-dateutil = "^2.9.0.post0"
python-ulid = "^2.7.0"

[tool.poetry.scripts]
adarevm = "adarevm.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
