[tool.poetry]
name = "adarevm"
version = "0.1.1"
description = ""
authors = ["miqsoft <mksaxhandball@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
adarelib = {path = "../adarelib"}
python = "^3.10"
pyautogui = "^0.9.54"
pillow = "^11.3.0"
websockets = "^15.0"
cattrs = "^23.2.3"
attrs = "^24.0.0"
python-dateutil = "^2.9.0.post0"
python-ulid = "^2.7.0"
pytz = "^2025.2"


[tool.poetry.scripts]
adarevm = "adarevm.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
