[metadata]
name = guiautomation
author = FKIE
author_email =
description = need to be done
version = attr: src.__version__
url =
keywords =

[options]
python_requires = >= 3.8
include_package_data = True
package_dir=
    =src
packages=
    guiautomation
    guiautomation.config
    guiautomation.logger
    guiautomation.Experiment
    guiautomation.helperfunctions

# do not add guibot here!
install_requires =
    PyYAML
    guibot

[options.packages.find]
where=src

;[options.entry_points]
;console_scripts =
;    guiautomation = guiautomation.run:run

[build-system]
requires = ["setuptools", "wheel"]