[metadata]
name = parseandtest
author = FKIE
author_email =
description = need to be done
version = attr: src.__version__
url = need to be done
keywords =

[options]
python_requires = >= 3.8
include_package_data = True
package_dir=
    =src
packages=
    parseandtest
    parseandtest.config
    parseandtest.customyaml
    parseandtest.helperfunctions
    parseandtest.logger
    parseandtest.parser
    parseandtest.resultformatter
    parseandtest.tester
    parseandtest.testfunctions

install_requires =
    datefinder
    dacite
    PyYAML
    attrs
    cattrs
    pandas
    python-dateutil

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    parseandtest = parseandtest.run:run

[build-system]
requires = ["setuptools", "wheel"]